fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -525,7 +525,7 @@ html {
         height: 50em;
     }
     header img {
-        padding-top: 1em;
+        padding-top: 2em;
     }
     nav ul {
         margin: 0;
